# xtl

./: .editorconfig  .gitignore  CMakeLists.txt  CMakeSettings.json  LICENSE.MIT.md  LICENSE.ja.md  LICENSE.md  README.md  test.cpp  xtl.config.h  xtl.h  xtl.vcxitems  xtl_aligned_memory_block.h  xtl_any.h  xtl_cache_map.h  xtl_concurrent_queue.h  xtl_delegate.h  xtl_enum_struct_bitwise_operators.h  xtl_event_callback.h  xtl_exception.h  xtl_filesystem.h  xtl_fixed_buffer_string.h  xtl_functional.h  xtl_lazy.h  xtl_logger.h  xtl_memory_block_iostream.h  xtl_memory_byte_stream.h  xtl_mstream.h  xtl_ostream.h  xtl_producer_consumer_queue.h  xtl_rastream.h  xtl_small_object_optimization.h  xtl_spin_lock_mutex.h  xtl_stdc++.h  xtl_timestamp.h  xtl_type_indexed_map.h  xtl_type_indexed_pointer_map.h  xtl_unique_handle.h  xtl_value_or_error.h  xtl_worker_thread.h  (+1 more)
xtl/: xtl.h  xtl_aligned_memory_block.h  xtl_any.h  xtl_concurrent_queue.h  xtl_copy_move_operation_debug_helper.h  xtl_delegate.h  xtl_enum_indexed_array.h  xtl_enum_struct_bitwise_operators.h  xtl_event_callback.h  xtl_exception.h  xtl_filesystem.h  xtl_fixed_buffer_string.h  xtl_fixed_memory_stream.h  xtl_functional.h  xtl_lazy.h  xtl_manual_reset_event.h  xtl_mstream.h  xtl_ostream.h  xtl_rastream.h  xtl_single_thread.h  xtl_small_object_optimization.h  xtl_span.h  xtl_spin_lock_mutex.h  xtl_stdc++.h  xtl_temp_memory_buffer.h  xtl_timestamp.h  xtl_type_indexed_map.h  xtl_type_indexed_pointer_map.h  xtl_type_punning_iterator.h  xtl_value_or_error.h  (+1 more)
xtl._tests/: CMakeLists.txt  CMakeSettings.json  playground.cpp
